[package]
name = "slog-syslog"
version = "0.0.1"
authors = ["Alexander Goldberg <algold@gmail.com>"]
description = "Syslog drain and formatter for slog-rs"
keywords = ["slog", "logging", "log", "syslog"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-syslog"
homepage = "https://github.com/slog-rs/syslog"
repository = "https://github.com/slog-rs/syslog"
readme = "README.md"

[lib]
path = "lib.rs"

[dependencies]
derive_builder = "*"
custom_derive = "*"
unix_socket ="*"
# slog = "1.5.0"
slog = { git = "https://github.com/slog-rs/slog.git" }
slog-stream = "1.2"
slog-serde = "*"
serde_json = "0.9"
chrono = "^0.3"
isatty = "0.1"
thread_local = "0.3"
libc = "*"
hostname = "*"
